Software/ConsoleThread/QuickUSB.h

// QuickUSB settings (wIndex values for QUICKUSB_SETTING
#define SETTING_WORDWIDE      1           // *wbuf = 1 is 16 bit transfers, 0 is 8 bits
#define SETTING_DATAADDRESS   2           // *wbuf = Data transfer address.  
                                          // If the high bit is set, don't increment addresses
#define SETTING_FIFOCONFIG    3           // *wbuf: 0xFB=Slave, 0xFA=Master mode
#define SETTING_FPGATYPE      4           // FPGA configuration type
#define SETTING_CPUCONFIG     5           // Sets/Reads CPUCS
// FIFO config settings
#define FIFOCONFIG_GPIF       0xFA
#define FIFOCONFIG_SLAVE      0x03
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  QuickUSB Error Codes
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
#define QUICKUSB_ERROR_NO_ERROR              0
#define QUICKUSB_ERROR_OUT_OF_MEMORY         1
#define QUICKUSB_ERROR_CANNOT_OPEN_MODULE    2
#define QUICKUSB_ERROR_CANNOT_FIND_DEVICE    3
#define QUICKUSB_ERROR_IOCTL_FAILED          4
#define QUICKUSB_ERROR_INVALID_PARAMETER     5
#define QUICKUSB_ERROR_TIMEOUT               6
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  External function declarations
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
// General purpose calls
extern int WINAPI QuickUsbGetLastError(unsigned long *error);
extern int WINAPI QuickUsbFindModules(char *nameList,
                                     unsigned long length);
extern int WINAPI QuickUsbOpen(HANDLE *hDevice, char *deviceName);
extern int WINAPI QuickUsbClose(HANDLE hDevice);
extern int WINAPI QuickUsbGetStringDescriptor(HANDLE hDevice, 
                                              unsigned char index,
                                              char *buffer, 
                                              unsigned short length);
extern int WINAPI QuickUsbReadSetting(HANDLE hDevice, 
                                      unsigned short address, 
                                      unsigned short *value);
extern int WINAPI QuickUsbWriteSetting(HANDLE hDevice,
                                       unsigned short address, 
                                       unsigned short value);
extern int WINAPI QuickUsbStartFpgaConfiguration(HANDLE hDevice);
extern int WINAPI QuickUsbWriteFpgaData(HANDLE hDevice, 
                                        unsigned char *fpgadata, 
                                        unsigned long datalength);
extern int WINAPI QuickUsbIsFpgaConfigured(HANDLE hDevice, 
              	                          unsigned short *isConfigured);
extern int WINAPI QuickUsbReadCommand(HANDLE hDevice, 
                                      unsigned short address, 
                                      unsigned char *data, 
                                      unsigned short *length);
extern int WINAPI QuickUsbWriteCommand(HANDLE hDevice, 
                                       unsigned short address, 
                                       unsigned char *data, 
                                       unsigned short length);
extern int WINAPI QuickUsbReadData(HANDLE hDevice, 
                                   unsigned char *data, 
                                   unsigned long *length);
extern int WINAPI QuickUsbWriteData(HANDLE hDevice, 
                                    unsigned char *data, 
                                    unsigned long length);
extern int WINAPI QuickUsbReadPortDir(HANDLE hDevice, 
                                   unsigned short address, 
                                   unsigned char *data);
extern int WINAPI QuickUsbWritePortDir(HANDLE hDevice, 
                                    unsigned short address, 
                                    unsigned char data);
extern int WINAPI QuickUsbReadPort(HANDLE hDevice, 
                                   unsigned short address, 
                                   unsigned char *data, 
                                   unsigned short *length);
extern int WINAPI QuickUsbWritePort(HANDLE hDevice, 
                                    unsigned short address, 
                                    unsigned char *data, 
                                    unsigned short length);
extern int WINAPI QuickUsbSetRS232BaudRate(HANDLE hDevice, 
                                           unsigned long baudRate);
extern int WINAPI QuickUsbGetNumRS232(HANDLE hDevice, 
                                      unsigned char portNum, 
                                      unsigned short *length);
extern int WINAPI QuickUsbFlushRS232(HANDLE hDevice, 
                                     unsigned char portNum);
extern int WINAPI QuickUsbReadRS232(HANDLE hDevice, 
                                    unsigned char portNum, 
                                    unsigned char *data, 
                                    unsigned short *length);
extern int WINAPI QuickUsbWriteRS232(HANDLE hDevice, 
                                     unsigned char portNum, 
                                     unsigned char *data, 
                                     unsigned short length);
extern int WINAPI QuickUsbReadSpi(HANDLE hDevice, 
                                  unsigned char portNum,
                                  unsigned char *data, 
                                  unsigned short *length);
extern int WINAPI QuickUsbWriteSpi(HANDLE hDevice, 
                                   unsigned char portNum,
                                   unsigned char *data, 
                                   unsigned short length);
extern int WINAPI QuickUsbWriteReadSpi(HANDLE hDevice, 
                                       unsigned char portNum, 
                                       unsigned char *data, 
                                       unsigned short length);